15.september - basic design CSS

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,20 @@
-	menu
+	
 
 
-<div routerLink="/" class="menu--link">Home</div>
-<div routerLink="/photos" class="menu--link">Photos</div>
-<div routerLink="/about" class="menu--link">About</div>
+
+
+<div style="width:100%; background-color:#eaeaea; height:4rem;">
+
+
+
+  <ul style="line-height:4rem;font-family:'Lucida Console', Monaco, monospace; font-size:14px;float:right;margin:0;">
+    <li style="position:absolute;left:2rem;list-style-type:none;" routerLink="/">
+      <img style="padding:1rem;cursor:pointer;" width="30" src="https://img.icons8.com/cotton/2x/blood-sample.png" />
+    </li>
+   
+    <li routerLink="/photos" class="menu--item  menu--btn-photos">Photos</li>
+    <li routerLink="/about" class="menu--item  menu--btn-about">About</li>
+  </ul>
+
+
+</div>
