10.november - basic HTTP POST PUT DELETE

--- a/src/app/photos/photos.component.html
+++ b/src/app/photos/photos.component.html
@@ -24,5 +24,10 @@
    
   </div>
 
+  <div class="row col-sm-12" style="display:inline-block;text-align:center;padding:2rem;">    
+      <button (click)="onSave()">Add Photo</button>   
+      <button (click)="onUpdate()">Update Photo</button>   
+      <button (click)="onDelete()">Delete Photo</button>    
+  </div>
 </div>
 
