--- a/src/app/photos/photos.component.html
+++ b/src/app/photos/photos.component.html
@@ -2,6 +2,7 @@
 <div style="text-align:center;font-size:20px; font-weight:bold;">Photos</div>
 <!-- Loader -->
 <div *ngIf="isLoading" style="text-align:center;background:#eaeaea; margin:3rem;padding:2rem;"> Loading Photos ...</div>
+<div *ngIf="isError" style="text-align:center;background:#ff0000; margin:3rem;padding:2rem;"> DB Error </div>
 
 
 
@@ -10,12 +11,17 @@
 <!--Form-->
 <div class="row col-sm-12" style="margin-left:2rem;margin-bottom:2rem;">
 
+
+
   <form [formGroup]="testForm">
+    <p>
+      {{helpfulEditId}}
+    </p>
     <label>Title</label>
     <input class="form-control" formControlName="title" />
 
     <label>Photo Url</label>
-    <input class="form-control" formControlName="url" />
+    <input class="form-control" formControlName="url" style="width:40rem" />
 
     <button *ngIf="!isUpdate" type="submit" (click)="onSubmit()"> Create </button>
 
@@ -27,15 +33,8 @@
 </div>
 
 
-<!--ToDo: po kliknuti na button update pri obrazku automaticky scroll hore, -->
+<!--ToDo: Pridat kategorie + funkcia zoradovanie podla kategorii (iba zeby ste mali lepsi napad) -->
 <!--ToDo: velkost fotky, rovnake zarovanie na kazdu fotku -->
-
-
-
-
-
-
-
 <!-- Photos -->
 
 <div class="row">
