--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -3,13 +3,13 @@
 
 
 
-<div style="width:100%; background-color:#eaeaea; height:4rem;">
+<div style="width:100%; height:4rem;position:absolute">
 
 
 
   <ul style="line-height:4rem;font-family:'Lucida Console', Monaco, monospace; font-size:14px;float:right;margin:0;">
-    <li style="position:absolute;left:2rem;list-style-type:none;" routerLink="/">
-      <img style="padding:1rem;cursor:pointer;" width="30" src="https://img.icons8.com/cotton/2x/blood-sample.png" />
+    <li class="logo" routerLink="/">
+      Photography app
     </li>
    
     <li routerLink="/photos" class="menu--item  menu--btn-photos">Photos</li>
