LS 002 - menu buttons changes

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -14,6 +14,7 @@
    
     <li routerLink="/photos" class="menu--item  menu--btn-photos">Photos</li>
     <li routerLink="/about" class="menu--item  menu--btn-about">About</li>
+    <li routerLink="/contact" class="menu--item  menu--btn-contact">Contact</li>
   </ul>
 
 
