--- a/src/app/photos/photos.component.html
+++ b/src/app/photos/photos.component.html
@@ -1,5 +1,17 @@
 <!-- Header -->
-<div style="text-align:center;font-size:20px; font-weight:bold;">Photos</div>
+<div>.</div>
+<div style="text-align:center;font-size:20px; font-weight:bold; margin:4rem;">Photos</div>
+
+<div class="slider" style="text-align:center; position:relative; width:100%">
+  <div class="slides" style="display:flex">
+    <div *ngFor="let item of items" style="background-color:grey; width:65rem; height:30rem; ">
+      <img style="width:100%; height:100%" [src]="item.url" />
+    </div>
+
+  </div>
+
+</div>
+
 <!-- Loader -->
 <div *ngIf="isLoading" style="text-align:center;background:#eaeaea; margin:3rem;padding:2rem;"> Loading Photos ...</div>
 <div *ngIf="isError" style="text-align:center;background:#ff0000; margin:3rem;padding:2rem;"> DB Error </div>
