--- a/src/app/photos/photos.component.html
+++ b/src/app/photos/photos.component.html
@@ -2,15 +2,29 @@
 <div>.</div>
 <div style="text-align:center;font-size:20px; font-weight:bold; margin:4rem;">Photos</div>
 
-<div class="slider" style="text-align:center; position:relative; width:100%">
+<div class="slider" id="slider" style="text-align:center; position:relative; width:100%; left:12%; overflow:hidden">
   <div class="slides" style="display:flex">
-    <div *ngFor="let item of items" style="background-color:grey; width:65rem; height:30rem; ">
-      <img style="width:100%; height:100%" [src]="item.url" />
+    <div *ngFor="let item of items" style="background-color:grey; width:65rem; height:30rem; flex-shrink:0; margin-right:2rem ">
+      <img style="width:100%; height:100%; object-fit:cover" [src]="item.url" />
     </div>
 
   </div>
 
 </div>
+
+<div class="row">
+  <div class="col-sm-5">
+  </div>
+
+  <div class="col-sm-1" (click)="onLeftArrow()">
+    < -
+  </div>
+
+  <div class="col-sm-1" (click)="onRightArrow()">
+    - > 
+  </div>
+</div>
+
 
 <!-- Loader -->
 <div *ngIf="isLoading" style="text-align:center;background:#eaeaea; margin:3rem;padding:2rem;"> Loading Photos ...</div>
