--- a/src/app/photos/photos.component.html
+++ b/src/app/photos/photos.component.html
@@ -2,10 +2,19 @@
 <div>.</div>
 <div style="text-align:center;font-size:20px; font-weight:bold; margin:4rem;">Photos</div>
 
-<div class="slider" id="slider" style="text-align:center; position:relative; width:180%; left:-55%; overflow:hidden">
+<div class="slider" id="slider" style="text-align:center; position:relative; width:100%; left:12%; overflow:hidden">
   <div class="slides" style="display:flex">
-    <div *ngFor="let item of items" style="background-color:grey; width:65rem; height:30rem; flex-shrink:0; margin-right:2rem ">
-      <img style="width:100%; height:100%; object-fit:cover" [src]="item.url" />
+    <div *ngFor="let item of items" style="background-color:grey; width:65rem; height:30rem; flex-shrink:0; margin-right:2rem; position:relative ">
+      <img style="width:100%; object-fit:cover" [src]="item.url" onerror="this.onerror = null;this.src = 'https://thumbs.static-thomann.de/thumb/thumb250x220/pics/prod/174723.jpg'" />
+      <div class=" photo--info">
+        <div>{{item.title}}</div>
+        <div>{{item._id}}</div>
+      </div>
+      <div class="photo--options">
+        <div>edit </div>
+        <div>deletefekete (stlacaj opatrne)</div>
+        <div>close</div>
+      </div>
     </div>
 
   </div>
@@ -17,11 +26,11 @@
   </div>
 
   <div class="col-sm-1" (click)="onLeftArrow()">
-    < -
+    < -   Klikaj
   </div>
 
   <div class="col-sm-1" (click)="onRightArrow()">
-    - > 
+    Pomaly - > 
   </div>
 </div>
 
